--- a/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
+++ b/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
@@ -63,7 +63,11 @@
               <td>{{prd.id}}</td>
               <td>{{prd.Name}}</td>
               <td>{{prd.price | currency:'EGP '}}</td>
-              <td><input type="checkbox" (change)="check($event,prd.id)"></td>
+              <td>
+                @if(checked == 'checkbox'+prd.id || counter == 0)
+                {<input type="checkbox" name="checked" id="checkbox{{prd.id}}" (click)="check($event,prd.id)">}
+                @else{<input disabled type="checkbox" name="checked" id="checkbox{{prd.id}}" (click)="check($event,prd.id)">}
+              </td>
               <td style="width: 100px; background-color: bisque;">
                 <div class="deal" style="display: none;" id="{{prd.id}}">
                 <div class="dropdown col-3">
@@ -77,7 +81,7 @@
             @if(prd.smallPrice){<li><button class="dropdown-item" id="{{prd.id}}" name="smallPrice" (click)="setDiscountedSize($event,prd.id)">Small</button></li>}
                   </ul>
                 </div>
-                <input [(ngModel)]="DiscountedPrice" style="display: none;" id="DiscountInput+{{prd.id}}" (change)="setDiscountedPrice(prd.id)" type="text" class="mt-2 border-0 rounded-2 p-1 w-100">
+                <input [(ngModel)] = "DiscountedPrice" style="display: none;" name ="DiscountInput+{{prd.id}}"  id="DiscountInput+{{prd.id}}" (change)="setDiscountedPrice($event,prd.id)" type="text" class="mt-2 border-0 rounded-2 p-1 w-100">
               </div>
               </td>
               <td>
