--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,17 @@
         padding-top: 58px;
     }
 } */
+
+.containerr {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+}
+
+.content {
+    flex: 1; /* Take up remaining space */
+}
+
+.footer {
+    margin-top: auto; /* Push footer to the bottom */
+}
