--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="containerr">
+
+    <div class="header">
+        <app-header></app-header>
+    </div>
+
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+
+    <div class="footer">
+        <app-footer></app-footer>
+    </div>
+
+</div>
