--- a/src/app/Components/deals-cart/deals-cart.component.html
+++ b/src/app/Components/deals-cart/deals-cart.component.html
@@ -1,6 +1,6 @@
 @if(deals.dealsmallPrice || deals.dealmediumPrice || deals.deallargePrice)
 {
-<div class="mycard card child">
+<div class="mycard card child" style="height: 530px;">
         <div class="parent text-center "> <!-- Added text-center -->
             <div class="overflow-hidden p-4">
                  <img src="{{deals.Image}}" class="w-75" />
