--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="app-footer">
-<!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-2">
+  <!-- Remove the container if you want to extend the Footer to full width. -->
+  <div class="container my-2">
     <!-- Footer -->
     <footer class="text-center text-white" style="background-color: #393838;">
       <!-- Grid container -->
@@ -41,10 +41,9 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                distinctio earum repellat quaerat voluptatibus placeat nam,
-                commodi optio pariatur est quia magnam eum harum corrupti
-                dicta, aliquam sequi voluptate quas.
+                Welcome to our pizza haven! Indulge in a culinary journey at our cozy restaurant, where savory slices
+                meet a symphony of flavors. Immerse yourself in the art of pizza perfection, crafted with passion and
+                served with a side of warmth.
               </p>
             </div>
           </div>
@@ -71,8 +70,8 @@
         </section>
       </div>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-           © 2020 Copyright: Restaurant.
-           Featured products available at participating locations only. All rights reserved. Terms &amp; Conditions apply.
+        © 2020 Copyright: Restaurant.
+        Featured products available at participating locations only. All rights reserved. Terms &amp; Conditions apply.
       </div>
     </footer>
   </div>
