--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -8,17 +8,17 @@
             </span>
         </div>
         <div class="row col-12 justify-content-around my-4">
-            <div class="col-5 img1 text-center my-2"  routerLink="/profile">
+            <div class="col-5 img1 text-center my-2"  routerLink="/deals">
                 <span class="spanimg">Deals</span>
             </div>
             <div class="col-5 img2 text-center my-2" routerLink="/pizza">
                 <span class="spanimg">Pizza</span>
             </div>
-            <div class="col-5 text-center img3 my-2">
+            <div class="col-5 text-center img3 my-2" routerLink="/starters">
                 <span class="spanimg">Starters</span>
             </div>
-            <div class="col-5 text-center img4 my-2">
-                <span class="spanimg">Offers</span>
+            <div class="col-5 text-center img4 my-2" routerLink="/profile">
+                <span class="spanimg">Profile</span>
             </div>
         </div>
 </div>
