--- a/src/app/Components/onestarter/onestarter.component.html
+++ b/src/app/Components/onestarter/onestarter.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
         
-    <div class="card-body text-center">
+    <div class="card-body text-center" style="height: 230px;">
         <!-- Card Details -->
         <p class="card-title fs-5 fw-medium">{{onestart.Name}}</p>
         <p class="fs-6">{{onestart.Description}}</p>
