--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -35,7 +35,7 @@
                     <div class="card-body text-center">
                         <h3 class="card-title mb-3 text-reset"><b>Chicken BBQ</b></h3>
                         <p class="text-reset">Grilled Chicken & Onions Loaded On BBQ Base</p>
-                      <h5>Medium | Pan</h5>
+                      <h5>Small | Large</h5>
                     </div>
                   </div>
                
@@ -64,7 +64,7 @@
                     <div class="card-body text-center ">
                         <h3 class="card-title mb-3 text-reset"><b>Chicken Supreme</b></h3>
                         <p class="text-reset">The ultimate mix of Chicken together with Mus</p>
-                      <h5>Small | Pan</h5>
+                      <h5>Medium | Small</h5>
                       <!-- <h6 class="mb-3">EGP 121.00</h6>
                       <div class="d-flex justify-content-around">
                         <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
@@ -89,7 +89,7 @@
                     <div class="card-body text-center">
                         <h3 class="card-title mb-3 text-reset"><b>Original Chicken</b></h3>
                         <p class="text-reset">Ranch base sauce with grilled chicken, mushro</p>
-                      <h5>Medium | Pan</h5>
+                      <h5>Medium | Small</h5>
                       <!-- <h6 class="mb-3">EGP 195.00</h6>
                       <div class="d-flex justify-content-around">
                         <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
