--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -20,14 +20,13 @@
             <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                 <!-- Team Thumb-->
-                <div class="advisor_thumb"><img style="width: 315px; height: 315px;" src="assets\jujutsu-kaisen-vol-11-9781974722846_hr.jpg" alt="">
+                <div class="advisor_thumb"><img style="width: 315px; height: 315px;" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
                     <!-- Social Info-->
-                    <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
-                                class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social-info"><a href="https://www.facebook.com/ahmednedo.magdy?mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook"></i></a><a href="https://x.com/ahmedma96869985?s=21" target="_blank"><i class="fa-brands fa-x-twitter"></i></a><a href="https://www.linkedin.com/in/ahmed-magdy26?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
                 <!-- Team Details-->
                 <div class="single_advisor_details_info">
-                    <h6>Ahmed Magdy</h6>
+                    <h3>Ahmed Magdy</h3>
                     <p class="designation">FullStack Developer</p>
                 </div>
             </div>
@@ -37,14 +36,13 @@
             <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.3s"
                 style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                 <!-- Team Thumb-->
-                <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
+                <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
                     <!-- Social Info-->
-                    <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
-                                class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social-info"><a href="https://www.facebook.com/profile.php?id=100009159716739&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a><a href="#"><i class="fa-brands fa-x-twitter"></i></a><a href="https://www.linkedin.com/in/islam-saleh-8505371b2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
                 <!-- Team Details-->
                 <div class="single_advisor_details_info">
-                    <h6>Islam Saleh</h6>
+                    <h3>Islam Saleh</h3>
                     <p class="designation">FullStack Developer</p>
                 </div>
             </div>
@@ -56,12 +54,11 @@
                 <!-- Team Thumb-->
                 <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="">
                     <!-- Social Info-->
-                    <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
-                                class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social-info"><a href="https://www.facebook.com/profile.php?id=100003192727045&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a><a href="#"><i class="fa-brands fa-x-twitter"></i></a><a href="https://www.linkedin.com/in/shaimaafouad" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
                 <!-- Team Details-->
                 <div class="single_advisor_details_info">
-                    <h6>Shaimaa Mohamed</h6>
+                    <h3>Shaimaa Mohamed</h3>
                     <p class="designation">FullStack  Developer</p>
                 </div>
             </div>
@@ -71,14 +68,13 @@
             <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.4s"
                 style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                 <!-- Team Thumb-->
-                <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
+                <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="">
                     <!-- Social Info-->
-                    <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
-                                class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social-info"><a href="https://www.facebook.com/profile.php?id=100002781926240&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook"></i></a><a href="https://twitter.com/yasmeen_1319" target="_blank"><i class="fa-brands fa-x-twitter"></i></a><a href="https://www.linkedin.com/in/yasmeen-mohamed-20a10b262?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
                 <!-- Team Details-->
                 <div class="single_advisor_details_info">
-                    <h6>Yasmeen Mohamed</h6>
+                    <h3>Yasmeen Mohamed</h3>
                     <p class="designation">FullStack Developer</p>
                 </div>
             </div>
@@ -90,12 +86,11 @@
                 <!-- Team Thumb-->
                 <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
                     <!-- Social Info-->
-                    <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
-                                class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social-info"><a href="#"><i class="fa-brands fa-facebook"></i></a><a href="#"><i class="fa-brands fa-x-twitter"></i></a><a href="#"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
                 <!-- Team Details-->
                 <div class="single_advisor_details_info">
-                    <h6>Mohamed Mufreh</h6>
+                    <h3>Mohamed Mufreh</h3>
                     <p class="designation">FullStack Developer</p>
                 </div>
             </div>
