--- a/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.css
+++ b/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.css
@@ -43,3 +43,12 @@ span{
     background-color: #393838;
     color: white;
 }
+
+
+/*  */
+@media screen and (max-width: 500px) {
+    .discount-column
+    {
+      display: none;
+    }
+}
