--- a/src/app/Components/deals/deals.component.html
+++ b/src/app/Components/deals/deals.component.html
@@ -31,7 +31,7 @@
                     <div class="card-body text-center">
                         <h3 class="card-title mb-3 text-reset"><b>Original Chicken Ranch</b></h3>
                         <p class="text-reset">Ranch base sauce with grilled chicken, mushro</p>
-                      <h5>Small Size</h5>
+                      <h5>Medium | Small</h5>
                     </div>
                   </div>
         </div>
