--- a/src/app/Components/starters/starters.component.html
+++ b/src/app/Components/starters/starters.component.html
@@ -2,10 +2,10 @@
     <div class="row m-auto p-5 justify-content-around ">
         <div class="col-8 d-flex flex-wrap justify-content-evenly">
             @for (starter of allProducts; track starter.id){
-                <app-onestarter class="col-lg-4 col-md-12 col-12 m-5" (objectFromEventEmitter)="receiveDataFromOnestarter($event)" [onestart]="starter" [receiveDataFromStarters]="sendDataFromStarters"></app-onestarter>
+                <app-onestarter class="col-lg-3 col-md-5 my-4 mx-2" style="min-width: 250px;" (objectFromEventEmitter)="receiveDataFromOnestarter($event)" [onestart]="starter" [receiveDataFromStarters]="sendDataFromStarters"></app-onestarter>
             }
         </div>
-        <div class="col-sm-12 col-lg-4 py-4">
+        <div class="col-sm-12 col-lg-4 py-4 d-flex flex-lg-row flex-sm-column" style="min-width: 300px;">
             <app-small-cart [receiveDataFromStarters]="sendDataFromStarters" (objectFromEventEmitter)="receiveDataFromOnestarter($event)"></app-small-cart>
         </div>
     </div>
