--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,3 +19,16 @@
     left: 0;
     width: 100%;
 } */
+.containerr {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+ 
+.content {
+    flex: 1; /* Take up remaining space */
+}
+ 
+.footer {
+    margin-top: auto; /* Push footer to the bottom */
+}
